css/review.css
div#reviewFrame {
    background: var(--background-color) !important;
}

a.topicLink, .questionHeader {
    color: var(--header-color) !important;
}

.choiceLetterCircle {
    background: var(--background-color) !important;
}

div.selectedChoice {
    background: var(--foreground-color) !important;
}

.step,
div#questionAnswerFrame {
    background: var(--foreground-color);
}

td.augmentation {
    vertical-align: top;
}

div#prerequisiteFrame {
    width: 300px;
    background: var(--foreground-color);
    border: var(--border-style);
    margin-top: 15px;
    font-size: 13px;
    padding: 15px;
    margin-right: 25px;
}

div.prerequisite {
    margin-top: 5px;
    vertical-align: middle;
}

div#prerequisiteHeader {
    font-weight: bold;
}

div.question {
    color: var(--main-text-color) !important;
    margin-bottom: 20px;
}

